[tool.poetry]
name = "dash-user-management"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dash = "^2.4.1"
Flask-Login = "^0.6.1"
dash-bootstrap-components = "^1.1.0"
Werkzeug = "^2.1.2"
SQLAlchemy = "^1.4.36"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
